# opae-sdk

./: .anjuta_sym_db.db  CMakeLists.txt
cmake/modules/: benchmark_config.cmake  intel_fpga_bbb_include.cmake  test_config.cmake  test_config_ase.cmake
common/include/opae/: dma.h  dma_types.h  enum.h  feature.h  feature_types.h  fpga.h  types.h  types_enum.h  utils.h
doc/src/ase_userguide/: ase_userguide.md
libopae/: CMakeLists.txt  opae_int.h
libopae/feature_plugins/: CMakeLists.txt
libopae/feature_plugins/dma/: CMakeLists.txt
libopae/feature_plugins/dma/rcreek/: CMakeLists.txt  README.md
libopae/feature_plugins/dma/rcreek/gtest/: CMakeLists.txt  gtmain.cpp
libopae/feature_plugins/dma/rcreek/include/: fpga_dma.h  fpga_dma_types.h
libopae/feature_plugins/dma/rcreek/include_int/: common_internal.h  fpga_common_internal.h  globals.h  internal_funcs.h  mmio_utils_internal.h
libopae/feature_plugins/dma/rcreek/tests/pool/: CMakeLists.txt  pool_test.c
libopae/feature_plugins/dma/rcreek/tests/queue/: CMakeLists.txt  queue_test.c
libopae/feature_plugins/dma/rcreek/tests/streaming/: CMakeLists.txt  do_mm_test.c  fpga_dma_st_test.c
libopae/feature_plugins/dma/rcreek/unified_dma/: CMakeLists.txt  TransactionCompleteWorker.c  fpga_dma.c  fpga_dma_st.c  globals.c  m2m.c  m2s.c  open_close.c  s2m.c  signal_handler.c
libopae/feature_plugins/dma/rcreek/utils/buffer/: buffer_mgmt.c
libopae/feature_plugins/dma/rcreek/utils/dma_common/: dma_common.c
libopae/feature_plugins/dma/rcreek/utils/pool/: pool_mgmt.c
libopae/feature_plugins/dma/rcreek/utils/queue/: queue_mgmt.c
libopae/plugins/xfpga/: dma_types_int.h  thpool.c  types_int.h
libopae/plugins/xfpga/dma/rcreek/include/: fpga_dma.h  fpga_dma_types.h
libopae/plugins/xfpga/dma/rcreek/include_int/: fpga_common_internal.h  fpga_dma_internal.h  memcpy_internal.h
scripts/: test-codingstyle.sh
testing/xfpga/dma/rcreek/streaming/: fpga_pattern_checker.h  fpga_pattern_gen.h
